<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                card_view:contentPadding="5dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/image_user"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        android:scaleType="center"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/image_user" />

                    <LinearLayout
                        android:id="@+id/linear_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_user"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded,UseCompoundDrawables">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/user"
                            android:contentDescription="@string/icon_user" />

                        <TextView
                            android:id="@+id/text_user"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textColor="@color/grayDark"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_user"
                        android:layout_below="@+id/linear_user"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded,UseCompoundDrawables">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/calendar"
                            android:contentDescription="@string/icon_date" />

                        <TextView
                            android:id="@+id/text_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textColor="@color/grayDark"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_user"
                        android:layout_below="@+id/linear_date"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded,UseCompoundDrawables">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/phone"
                            android:contentDescription="@string/icon_phone" />

                        <TextView
                            android:id="@+id/text_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:autoLink="phone"
                            android:textColor="@color/grayDark"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_user"
                        android:layout_below="@+id/linear_phone"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded,UseCompoundDrawables">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/mail"
                            android:contentDescription="@string/icon_mail" />

                        <TextView
                            android:id="@+id/text_mail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:autoLink="email"
                            android:textColor="@color/grayDark"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/image_user"
                        android:layout_below="@+id/linear_mail"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded,UseCompoundDrawables">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_gravity="center"
                            android:src="@drawable/world"
                            android:contentDescription="@string/icon_world" />

                        <TextView
                            android:id="@+id/text_country"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/grayDark"/>

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp"
                card_view:contentPadding="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/grayDark"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/ubicacion"/>

                    <fragment
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:name="com.google.android.gms.maps.SupportMapFragment" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>